syntax = "proto3";

package com.criteo.hadoop.garmadon;

option java_package = "com.criteo.hadoop.garmadon.event.proto";
option java_outer_classname = "EventHeaderProtos";

message Header {
    string application_id = 1;
    string attempt_id = 2;
    string application_name = 3;
    string username = 4;
    string container_id = 5;
    string hostname = 6;
    string pid = 8;
    string framework = 9;
    string component = 10;
    string executor_id = 11;
    repeated string tags = 12;
    string id = 13;
    string main_class = 14;
}