syntax = "proto3";

package com.criteo.hadoop.garmadon;

option java_package = "com.criteo.hadoop.garmadon.event.proto";
option java_outer_classname = "FlinkEventProtos";

message JobManagerEvent {
    repeated Property metrics = 1;
}

message Property {
    string name = 1;
    int64 value = 2;
}

message JobEvent {
    string job_id = 1;
    string job_name = 2;
    repeated Property metrics = 3;
}